Css changes and overflow correction

--- a/3d-slider/src/Components/Can/Can.css
+++ b/3d-slider/src/Components/Can/Can.css
@@ -1,3 +1,11 @@
+.can-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  position: absolute;
+  overflow: hidden;
+}
+
 .container {
   max-width: 13rem;
   z-index: 2;
@@ -22,7 +30,6 @@
   z-index: 2;
 }
 .mask {
-  /* margin: 20px auto; */
   display: block;
   width: 100%;
 
@@ -37,7 +44,6 @@
   position: relative;
   z-index: 2;
   height: 102%;
-  /* top: -2.1rem; */
   left: 0rem;
   z-index: 2;
   mix-blend-mode: multiply;
@@ -56,7 +62,6 @@
   height: auto;
   width: 13rem;
   z-index: 2;
-  /* top: 1rem; */
 }
 
 .shadow {
