--- a/3d-slider/src/Components/FruitsSlider/FruitSlider.css
+++ b/3d-slider/src/Components/FruitsSlider/FruitSlider.css
@@ -1,19 +1,13 @@
-.fruit-slider-div {
-  height: 300vh;
+
+.fruits-div {
+  position: absolute;
+  height: 100%;
   width: 100%;
-  position: absolute;
   overflow: hidden;
+  min-height: 100vh;
 }
 
-.fruit-image-div {
-  height: 100vh;
-  position: absolute;
 
-width: 100%;
-z-index: 2;
-transition: transform 1.2s cubic-bezier(1, 0, 0, 1);
-overflow: hidden;
-}
 
 .fruit-slider-image {
   width: 120%;
@@ -22,8 +16,65 @@ overflow: hidden;
   margin-top: 5rem;
   left: 50%;
   transform: translateX(-50%);
+
 }
 
-@media screen and (max-width: 768px) {
-  .fruit-image-div {z-index: 1;}
+.fruit-image-div {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  transition: transform 1.2s cubic-bezier(1, 0, 0, 1);
+position: absolute;
+  z-index: 2;
+}
+
+
+
+
+.apple-position-1 {
+  transform: translateY(-100%);
+
+}
+
+.apple-position-2 {
+  transform: translateY(0%);
+}
+
+.apple-position-3 {
+  transform: translateY(100%);
+}
+
+@keyframes fallAnimation {
+  from {
+    transform: translateY(-100%); 
+  }
+  to {
+    transform: translateY(0%);   }
+}
+
+
+
+.pear-position-1 {
+  transform: translateY(0%);
+}
+
+.pear-position-2 {
+  bottom: 0;
+  transform: translateY(100%);
+
+}
+.pear-position-3 {
+  transform: translateY(-100%);
+}
+
+
+.exotic-position-1 {
+  transform: translateY(200%);
+
+}
+.exotic-position-2 {
+  transform: translateY(100%);
+}
+.exotic-position-3 {
+  transform: translateY(0%);
 }
